--- a/FeatureExtraction/pom.xml
+++ b/FeatureExtraction/pom.xml
@@ -215,5 +215,12 @@
   	  		<version>1.3.1</version>
   	  		<type>pom</type>
   	  	</dependency>
+  	  	<!-- https://mvnrepository.com/artifact/nz.ac.waikato.cms.weka/weka-stable -->
+<dependency>
+    <groupId>nz.ac.waikato.cms.weka</groupId>
+    <artifactId>weka-stable</artifactId>
+    <version>3.6.6</version>
+</dependency>
+  	  	
   </dependencies>
 </project>
